--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,19 @@
             "env": {},
             "args": [],
             "showLog": true
+        },
+        {
+            "name": "Tests",
+            "type": "go",
+            "request": "launch",
+            "mode": "test",
+            "remotePath": "",
+            "port": 2345,
+            "host": "127.0.0.1",
+            "program": "${workspaceRoot}/nethelper",
+            "env": {},
+            "args": [],
+            "showLog": true
         }
     ]
 }
